<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media_library" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="share_app" translatable="false">Поделиться приложением</string>
    <string name="write_on_support" translatable="false">Написать в поддержку</string>
    <string name="user_contract" translatable="false">Пользовательское соглашение</string>
    <string name="dark_theme_string" translatable="false">Тёмная тема</string>
    <string name="message_for_support" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_support" translatable="false">fame37@yandex.ru</string>
    <string name="theme_support" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="user_contract_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_app_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_data_mailto">mailto:</string>
    <string name="connection_error">Проблемы со связью. \n\nЗагрузка не удалась.\nПроверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="empty_search">Ничего не нашлось</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country_audio_player">Страна</string>
    <string name="genre_audio_player">Жанр</string>
    <string name="year_audio_player">Год</string>
    <string name="artwork_audio_player">Альбом</string>
    <string name="track_time_audio_player">Длительность</string>
    <string name="no_data">Нет данных</string>
    <string name="can_not_play">Воспроизведение не поддерживается</string>
    <string name="zero_playback_progress">00:00</string>
    <string name="mediatech">Медиатека</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_mediatech_list_favorite_track">Ваша медиатека пуста</string>
    <string name="empty_playlist_list">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="create">Создать</string>
    <string name="description">Описание</string>
    <string name="name">Название*</string>
    <string name="No_tracks_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="save_button">Сохранить</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="wont_delete_playlist">Хотите удалить плейлист \"%1$s\"?</string>
    <string name="wont_delete_track">Хотите удалить трек?</string>
    <plurals name="plurals_track_count">
        <item quantity="zero">треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <plurals name="plurals_tracks_duration">
        <item quantity="zero">минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>