<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/main_activity_linear_layout_style"
    android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="start"
            android:textColor="@color/white"
            android:textSize="@dimen/main_text_size"
            android:fontFamily="@font/ys_display_medium"/>
    <LinearLayout
        style="@style/main_activity_linear_layout_style"
        android:layout_marginTop="24dp">
        <Button
            style="@style/main_activity_button_style"
            android:id="@+id/search_window"
            android:text="@string/search"
            app:icon="@drawable/search"
            />
        <Button
            style="@style/main_activity_button_style"
            android:id="@+id/library_window"
            android:text="@string/media_library"
            app:icon="@drawable/library"
            />
        <Button
            style="@style/main_activity_button_style"
            android:id="@+id/setting_window"
            android:text="@string/settings"
            app:icon="@drawable/settings"
            />
    </LinearLayout>
</LinearLayout>
