<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/settings_activity_linear_layout_style_main">
    <LinearLayout
        style="@style/settings_activity_linear_layout_style_top"
        android:padding="5dp"
        >
        <ImageButton
            style="@style/settings_activity_linear_layout_style_top_image_and_text"
            android:id="@+id/backToMainActivityViewButton"
            android:src="@drawable/arrowback"
            android:foreground="?attr/selectableItemBackground"
            />
        <TextView
            style="@style/settings_activity_linear_layout_style_top_image_and_text"
            android:text="@string/settings"
            android:gravity="top"
            android:textSize="22sp"
            android:padding="9dp"
            android:fontFamily="@font/ys_display_medium"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/settings_activity_linear_layout_style"
        android:id="@+id/linearDarkTheme">
        <TextView
            style="@style/settings_activity_text_style"
            android:text="@string/dark_theme_string" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>
    <LinearLayout
        style="@style/settings_activity_linear_layout_style"
        android:id="@+id/linearShareApp">
        <TextView
            style="@style/settings_activity_text_style"
            android:text="@string/share_app" />

        <ImageButton
            style="@style/settings_activity_image_button_style"
            android:id="@+id/shareAppImage"
            android:src="@drawable/share" />
    </LinearLayout>
    <LinearLayout
        style="@style/settings_activity_linear_layout_style"
        android:id="@+id/linearWriteToSupport">
        <TextView
            style="@style/settings_activity_text_style"
            android:text="@string/write_on_support" />
        <ImageButton
            style="@style/settings_activity_image_button_style"
            android:id="@+id/writeToSupportImage"
            android:src="@drawable/support" />
    </LinearLayout>
    <LinearLayout
        style="@style/settings_activity_linear_layout_style"
        android:id="@+id/linearUserContract">
        <TextView
            style="@style/settings_activity_text_style"
            android:text="@string/user_contract"
            />
        <ImageButton
            style="@style/settings_activity_image_button_style"
            android:id="@+id/userContractImage"
            android:src="@drawable/arrowforward" />
    </LinearLayout>
</LinearLayout>