<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/settings_activity_linear_layout_style_main">

    <LinearLayout
        style="@style/settings_activity_linear_layout_style_top"
        android:padding="5dp">

        <TextView
            style="@style/settings_activity_linear_layout_style_top_image_and_text"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="top"
            android:padding="9dp"
            android:text="@string/settings"
            android:textSize="22sp" />
    </LinearLayout>

    <Switch
        android:id="@+id/theme_Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:fontFamily="@font/ys_display_regular"
        android:paddingVertical="@dimen/settings_padding_vertical_and_left_text"
        android:paddingStart="@dimen/settings_padding_vertical_and_left_text"
        android:text="@string/dark_theme_string"
        android:textSize="@dimen/settings_text_size"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:id="@+id/linearShareApp"
        style="@style/settings_activity_linear_layout_style">

        <TextView
            style="@style/settings_activity_text_style"
            android:text="@string/share_app" />

        <ImageView
            style="@style/track_view_image_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/settings_padding_vertical_and_left_text"
            android:src="@drawable/share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearWriteToSupport"
        style="@style/settings_activity_linear_layout_style">

        <TextView
            style="@style/settings_activity_text_style"
            android:text="@string/write_on_support" />

        <ImageView
            style="@style/track_view_image_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/settings_padding_vertical_and_left_text"
            android:src="@drawable/support" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearUserContract"
        style="@style/settings_activity_linear_layout_style">

        <TextView
            style="@style/settings_activity_text_style"
            android:text="@string/user_contract" />

        <ImageView
            style="@style/track_view_image_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/settings_padding_vertical_and_left_text"
            android:src="@drawable/arrowforward" />
    </LinearLayout>
</LinearLayout>