<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tracks.fragments.SearchFragment">

    <LinearLayout
        style="@style/settings_activity_linear_layout_style_main"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/main_padding_left_image"
            android:paddingStart="@dimen/main_padding_left_image">
            <TextView
                style="@style/settings_activity_linear_layout_style_top_image_and_text"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="top"
                android:padding="@dimen/main_padding_left_image"
                android:text="@string/search"
                android:textSize="@dimen/main_text_size" />
        </LinearLayout>

        <FrameLayout
            style="@style/search_activity_frame_layout"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:layout_marginHorizontal="16dp">

            <EditText
                style="@style/search_activity_edit_text"
                android:backgroundTint="@android:color/transparent"
                android:id="@+id/editTextSearchActivity"
                android:drawableStart="@drawable/search"
                android:drawablePadding="@dimen/main_padding_left_image"
                android:fontFamily="@font/ys_display_regular"
                android:hint="@string/search"
                android:inputType="text"
                android:maxLength="50"
                android:imeOptions="actionDone"
                android:maxLines="1"/>
            <ImageButton
                android:id="@+id/clearEditTextSearchActivity"
                style="@style/search_activity_image_buttom"
                android:src="@drawable/close"
                android:visibility="gone" />
        </FrameLayout>
        <ProgressBar
            android:id="@+id/searchActivityProgressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="140dp"
            android:indeterminateTint="@color/main_activity_color"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/search_activity_error_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">
            <ImageView
                android:id="@+id/search_activity_error_image"
                style="@style/no_connect_view_image_view"
                android:layout_weight="0"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/search_activity_error_text"
                style="@style/no_connect_view_text_view"
                tools:text="@string/connection_error"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="24dp"
                android:layout_weight="0"/>
            <Button
                style="@style/no_connect_view_update_button"
                android:id="@+id/updateQueryButton"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textSize="@dimen/track_name_text_size"
                app:cornerRadius="54dp"
                android:layout_weight="0"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/search_activity_history_track_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                style="@style/no_connect_view_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_search"
                android:paddingTop="@dimen/search_activity_history_text_view_padding_top"
                android:paddingBottom="8dp"
                android:gravity="center" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_activity_history_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/track_view"
                tools:itemCount="10"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/main_padding_left_image"
                android:paddingStart="4dp"
                android:layout_weight="1"/>
            <Button
                style="@style/no_connect_view_update_button"
                android:id="@+id/clear_search_history"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/clear_history"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:cornerRadius="54dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:layout_weight="0"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/track_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/track_view"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/main_padding_left_image"
            android:paddingStart="4dp"
            android:visibility="gone"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>