<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/constraint_layout_audio_player_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create_playlist.fragment.CreatePlaylistFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline_for_imageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="17dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline_for_imageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="17dp"/>

    <ImageButton
        android:id="@+id/backButton_IB"
        style="@style/settings_activity_linear_layout_style_top_image_and_text"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/arrowback"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/new_playlist_TV"
        style="@style/main_text_view_audio_player_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_playlist"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:fontFamily="@font/ys_display_medium"
        android:layout_marginTop="4dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/backButton_IB"
        app:layout_constraintBottom_toBottomOf="@id/backButton_IB"/>

    <ImageView
        android:id="@+id/playlist_image_IV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="center"
        android:clickable="true"
        android:layout_marginTop="@dimen/margin_Top_16"
        app:layout_constraintDimensionRatio="h, 1:1"
        android:background="@drawable/add_image_view_corners"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_TV"
        app:layout_constraintStart_toStartOf="@id/start_guideline_for_imageview"
        app:layout_constraintEnd_toEndOf="@id/end_guideline_for_imageview"
        app:layout_constraintBottom_toTopOf="@id/name_TIL"
        android:src="@drawable/add_image"/>
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_TIL"
        app:layout_constrainedWidth="true"
        style="@style/text_layout_add_playlist_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/playlist_image_IV"
        app:layout_constraintStart_toEndOf="@id/start_guideline_for_imageview"
        app:layout_constraintEnd_toStartOf="@id/end_guideline_for_imageview"
        app:layout_constraintBottom_toTopOf="@id/description_TIL"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:hint="@string/name"
        app:boxStrokeColor="@color/main_activity_color"
        app:hintTextColor="@color/main_activity_color">
        
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLines="1"
            android:inputType="text"
            android:textSize="16dp"
            android:textAllCaps="false"
            android:imeOptions="actionDone"
            android:fontFamily="@font/ys_display_regular"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_TIL"
        app:layout_constrainedWidth="true"
        style="@style/text_layout_add_playlist_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/playlist_image_IV"
        app:layout_constraintStart_toEndOf="@id/start_guideline_for_imageview"
        app:layout_constraintEnd_toStartOf="@id/end_guideline_for_imageview"
        app:layout_constraintBottom_toTopOf="@id/create_B"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:hint="@string/description"
        app:boxStrokeColor="@color/main_activity_color"
        app:hintTextColor="@color/main_activity_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLines="1"
            android:inputType="text"
            android:textSize="16dp"
            android:imeOptions="actionDone"
            android:textAllCaps="false"
            android:fontFamily="@font/ys_display_regular"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_B"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/start_guideline_for_imageview"
        app:layout_constraintEnd_toStartOf="@id/end_guideline_for_imageview"
        android:layout_marginBottom="24dp"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/margin_Top_16"
        android:background="@drawable/round_corners_8_for_buttom_create"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>